optimize OptimizedScalarQuantizer#scalarQuantize when destination can be an integer array